[gd_scene load_steps=2 format=3 uid="uid://b3k5xvmqwp8yl"]

[ext_resource type="Script" path="res://scripts/ui/CharacterSelectScreen.gd" id="1_script"]

[node name="CharacterSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "?? SELECCIÓN DE PERSONAJE"
horizontal_alignment = 1

[node name="HBoxMain" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="CharactersScroll" type="ScrollContainer" parent="Panel/VBoxContainer/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="CharactersGrid" type="GridContainer" parent="Panel/VBoxContainer/HBoxMain/CharactersScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 5

[node name="CharacterPreview" type="PanelContainer" parent="Panel/VBoxContainer/HBoxMain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Portrait" type="TextureRect" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Nombre del Personaje"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "El Título"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Descripción del personaje..."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "??? Arma inicial: Ice Wand"

[node name="PassiveLabel" type="Label" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "? Pasiva: Nombre de pasiva"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "?? ESTADÍSTICAS"

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxMain/CharacterPreview/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="HBoxButtons" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/HBoxButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "?? VOLVER"

[node name="PlayButton" type="Button" parent="Panel/VBoxContainer/HBoxButtons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "?? JUGAR"
